--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "node-authentication",
   "main": "server.js",
   "dependencies" : {
-    "express" : "~4.0.0",       
-    "ejs" : "~0.8.5",         
+    "express" : "~4.6.1",       
+    "ejs" : "^1.0.0",         
     "mongoose" : "~3.8.1",      
     "passport" : "~0.1.17",     
     "passport-local" : "~0.1.6",  
@@ -12,7 +12,7 @@
     "passport-google-oauth" : "~0.1.5",
     "connect-flash" : "~0.1.1",   
     "bcrypt-nodejs" : "latest",
-
+    "jade": "~0.29.0",
     "morgan": "~1.0.0",
     "body-parser": "~1.0.0",
     "cookie-parser": "~1.0.0",
